<resources>
    <string name="app_name">FoodMarket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="type_your_password">Type your password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="type_your_phone_number">Type your Phone Number</string>
    <string name="address">Address</string>
    <string name="type_your_address">Type your address</string>
    <string name="house_no">House No.</string>
    <string name="city">City</string>
    <string name="type_your_house_number">Type your house number</string>
    <string name="type_your_city">Type your city</string>
    <string name="btn_continue">Continue</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="subtitle_toolbar">Find your best ever meal</string>
    <string name="yeay_completed">Yeay! Completed</string>
    <string name="detail_success">Now you are able to order\nsome foods as a self-reward</string>

</resources>
