<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signin.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="26dp"
        android:paddingRight="24dp">

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_no" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_phone_number"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_address"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/house_no" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_house_number"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/city" />

        <EditText
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_city"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up_now"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>